# GameVRF

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: copilot-feature-analysis.yml
apps/game-verify/: eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/game-verify/partials/: json-polyfill.html  logo-sprites.html
apps/game-verify/src/: App.tsx  index.css  main.tsx
apps/game-verify/src/common/: enums.ts  number-utils.ts  time.ts
apps/game-verify/src/common/ic-client/: actor-utils.tsx  identity.tsx  index.tsx  storage.tsx  utils.tsx
apps/game-verify/src/common/ic-client/open-canisters/icp_ledger_canister/: index.js
apps/game-verify/src/common/kv-storage/: index.tsx
apps/game-verify/src/common/sys/: dict.ts
apps/game-verify/src/components/: ConfirmPopover.tsx  DictLabel.tsx  DictSelect.tsx  DurationInput.tsx  PermissionDenied.tsx  StakingPoolSelect.tsx  SvgSprite.tsx
apps/game-verify/src/components/ProductLogo/: index.tsx
apps/game-verify/src/components/ProductLogo/images/: index.ts
apps/game-verify/src/components/UserProvider/: index.tsx
apps/game-verify/src/hooks/: useCSV.tsx  useDictSelect.tsx  useIsUserAdmin.tsx
apps/game-verify/src/layouts/: AppHeader.tsx  AppMenu.tsx  AppUser.tsx  TimeView.tsx  index.tsx
apps/game-verify/src/layouts/menus/: account.tsx  assets-management.tsx  comment.tsx  marketing.tsx  notification.tsx  product.tsx  report.tsx  risk.tsx  staking.tsx  system.tsx  user.tsx
apps/game-verify/src/routes/: index.tsx
canisters/game-verify/: Cargo.toml  game_verify.did
canisters/game-verify/src/: daily4.rs  keno.rs  lib.rs
canisters/random-oracle/: Cargo.toml  random_oracle.did
canisters/random-oracle/src/: ic_rand_utils.rs  lib.rs  memory_ids.rs  seed_pool.rs  stable_structures.rs  transport_structures.rs
doc/daily4/: verify.md
libraries/game-algorithms/: Cargo.toml
libraries/game-algorithms/src/: lib.rs
libraries/game-algorithms/src/common/: chacha.rs  mod.rs  seed_format.rs  seed_mixer.rs
libraries/game-algorithms/src/daily4/: mod.rs
libraries/game-algorithms/src/fruits_garden/: mod.rs  paylines.rs  spin_engine.rs  types.rs
libraries/game-algorithms/src/keno/: mod.rs
libraries/game-algorithms/src/mines/: mod.rs
libraries/game-algorithms/src/roulette/: mod.rs
