[workspace]
members = [
  "libraries/game-algorithms",

  "canisters/random-oracle",
  "canisters/game-verify"
]
resolver = "2"

[workspace.dependencies]
candid = "0.10.27"
ic-cdk = "0.20.1"
ic-cdk-macros = "0.20.1"
ic-cdk-timers = "1.0.0" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.7.2"
ic_principal = "0.1.3"

ic-ledger-types = "0.16.0"
sha2 = "0.11.0"

strum = "0.28.0"
strum_macros = "0.28.0"

serde = "1.0.216"
serde_bytes = "0.11.19"
serde_cbor = "0.11.2"
serde_json = "1.0.149"
serde_repr = "0.1.19"
serde_tokenstream = "0.2.2"

proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"

# Big number libraries
bigdecimal = "0.4.10"
num-bigint = "0.4.6"

# Random number generation
rand = { version = "0.10.1", default-features = false, features = ["std", "std_rng"] }
rand_chacha = "0.10.0"

# Time utils
chrono = { version = "0.4.41", default-features = false, features = [
    "alloc",
    "clock",
    "serde",
]}

# Scope guard recover from panic
scopeguard = "1.2.0"
