[package]
name = "game-algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true}


# Random number generation
rand = {workspace = true, features = ["std"] }
rand_chacha = {workspace = true, features = ["std"] }

hex = "0.4.3"

# [target.wasm32-unknown-unknown]
# rustflags = ['--cfg', 'getrandom_backend="custom"']