[package]
name = "game-algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true}


# Random number generation
rand = { version = "0.9.2", default-features = false, features = ["alloc"] }
rand_chacha = { version = "0.9.0", default-features = false }

hex = "0.4.3"

# [target.wasm32-unknown-unknown]
# rustflags = ['--cfg', 'getrandom_backend="custom"']